--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+anon-ws-disable-stacked-tor (3:0.4-1) unstable; urgency=low
+
+  * New upstream version.
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Mon, 08 Sep 2014 12:23:50 +0000
+
 anon-ws-disable-stacked-tor (3:0.3-1) unstable; urgency=low
 
   * New upstream version.
