--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+anon-ws-disable-stacked-tor (3:0.6-1) unstable; urgency=low
+
+  * New upstream version.
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Thu, 16 Oct 2014 17:08:18 +0000
+
 anon-ws-disable-stacked-tor (3:0.5-1) unstable; urgency=low
 
   * New upstream version.
