--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+anon-ws-disable-stacked-tor (3:1.0-1) unstable; urgency=low
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Tue, 24 Mar 2015 17:28:54 +0000
+
 anon-ws-disable-stacked-tor (3:0.9-1) unstable; urgency=low
 
   * New upstream version.
