--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+anon-ws-disable-stacked-tor (3:1.1-1) unstable; urgency=low
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Tue, 07 Apr 2015 17:41:19 +0000
+
 anon-ws-disable-stacked-tor (3:1.0-1) unstable; urgency=low
 
   * New upstream version (local package).
