--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+anon-ws-disable-stacked-tor (3:1.2-1) unstable; urgency=low
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Thu, 30 Apr 2015 17:55:57 +0000
+
 anon-ws-disable-stacked-tor (3:1.1-1) unstable; urgency=low
 
   * New upstream version (local package).
