--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+anon-ws-disable-stacked-tor (3:1.3-1) unstable; urgency=low
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Thu, 28 May 2015 15:43:26 +0000
+
 anon-ws-disable-stacked-tor (3:1.2-1) unstable; urgency=low
 
   * New upstream version (local package).
