--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+anon-ws-disable-stacked-tor (3:1.6-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Mon, 24 Aug 2015 17:47:14 +0000
+
 anon-ws-disable-stacked-tor (3:1.5-1) unstable; urgency=low
 
   * New upstream version (local package).
