--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+anon-ws-disable-stacked-tor (3:1.7-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Tue, 25 Aug 2015 14:07:46 +0000
+
 anon-ws-disable-stacked-tor (3:1.6-1) unstable; urgency=medium
 
   * New upstream version (local package).
