--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+anon-ws-disable-stacked-tor (3:1.9-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Thu, 07 Apr 2016 22:54:29 +0000
+
 anon-ws-disable-stacked-tor (3:1.8-1) unstable; urgency=medium
 
   * New upstream version (local package).
