--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+anon-ws-disable-stacked-tor (3:2.2-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Mon, 21 Nov 2016 22:24:36 +0000
+
 anon-ws-disable-stacked-tor (3:2.1-1) unstable; urgency=medium
 
   * New upstream version (local package).
