--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+anon-ws-disable-stacked-tor (3:2.3-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Tue, 22 Nov 2016 02:32:15 +0000
+
 anon-ws-disable-stacked-tor (3:2.2-1) unstable; urgency=medium
 
   * New upstream version (local package).
