--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+anon-ws-disable-stacked-tor (3:2.4-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Wed, 30 Nov 2016 11:49:19 +0000
+
 anon-ws-disable-stacked-tor (3:2.3-1) unstable; urgency=medium
 
   * New upstream version (local package).
