--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+anon-ws-disable-stacked-tor (3:2.5-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Sat, 10 Dec 2016 00:12:12 +0000
+
 anon-ws-disable-stacked-tor (3:2.4-1) unstable; urgency=medium
 
   * New upstream version (local package).
