--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+anon-ws-disable-stacked-tor (3:2.6-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Sun, 15 Jan 2017 15:21:40 +0000
+
 anon-ws-disable-stacked-tor (3:2.5-1) unstable; urgency=medium
 
   * New upstream version (local package).
