--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+anon-ws-disable-stacked-tor (3:2.8-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Fri, 17 Feb 2017 13:45:40 +0000
+
 anon-ws-disable-stacked-tor (3:2.7-1) unstable; urgency=medium
 
   * New upstream version (local package).
