--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+anon-ws-disable-stacked-tor (3:2.9-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Mon, 27 Feb 2017 01:38:38 +0000
+
 anon-ws-disable-stacked-tor (3:2.8-1) unstable; urgency=medium
 
   * New upstream version (local package).
