--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+anon-ws-disable-stacked-tor (3:3.0-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Wed, 26 Jul 2017 14:25:50 +0000
+
 anon-ws-disable-stacked-tor (3:2.9-1) unstable; urgency=medium
 
   * New upstream version (local package).
