--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+anon-ws-disable-stacked-tor (3:3.1-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Thu, 01 Feb 2018 14:50:03 +0000
+
 anon-ws-disable-stacked-tor (3:3.0-1) unstable; urgency=medium
 
   * New upstream version (local package).
