--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+anon-ws-disable-stacked-tor (3:3.2-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Sun, 11 Feb 2018 00:41:46 +0000
+
 anon-ws-disable-stacked-tor (3:3.1-1) unstable; urgency=medium
 
   * New upstream version (local package).
