--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+anon-ws-disable-stacked-tor (3:3.3-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Wed, 09 May 2018 12:19:55 +0000
+
 anon-ws-disable-stacked-tor (3:3.2-1) unstable; urgency=medium
 
   * New upstream version (local package).
