--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+anon-ws-disable-stacked-tor (3:3.5-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Mon, 27 Aug 2018 15:52:58 +0000
+
 anon-ws-disable-stacked-tor (3:3.4-1) unstable; urgency=medium
 
   * New upstream version (local package).
